# GANs_for_Network_Intrusion_Data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Data/: README.md
Data/NSL-KDD/: KDDTest.csv
NSL-KDD/: Data Exploration.ipynb  GAN_Hyperparameter_Tuning.ipynb  NSLKDD profile report.html  README.md  Tensorboard.ipynb  VannilaGan.py  Wasserstein.ipynb  analyse_logs.py  attacks_types.txt  auto.py  cgan.py  cgan_tune.ipynb  classifiers.py  features.txt  main.py  mnist_test.ipynb  nlskdd.ipynb  plot_logs.py  plots_for_paper.py  preprocessing.py  spocuGan.py  test.py  todo.txt  train.py  utils.py  wgan.py
NSL-KDD/imgs/: nsl_kl_div_plot.eps  nsl_relu_kl_div_plot.eps  nsl_spocu_kl_div_plot.eps
NSL-KDD/logs/: CGAN_32_4_2000_128_1_1_relu_sgd_00005_27.pickle  CGAN_RELU.pickle  CGAN_SPOCU.pickle
NSL-KDD/models/: VannilaGan.py  cgan.py  classifiers.py  tt.py  wgan.py
NSL-KDD/notebooks/: NSL_KDD_prepossessing_note.ipynb  nlskdd.ipynb
NSL-KDD/results/: nsl_orig.txt  performance1575577491_10folds.txt  performance1584972440_5validations.txt  performance1585046171_5validations.txt  performance1588268087_5validations.txt  performance1588268705_5validations.txt  performance1604059064_5validations.txt  performance1604062727_5validations.txt  smote_res.txt  (+3 more)
UNSW-NB15/: README.md  UNSW profile report.html  UNSWperformance.txt  analyse_logs.py  best_cgans.csv  cgan.py  classifiers.py  main.py  plot_logs.py  plots_for_paper.py  prepossessing_note.ipynb  preprocessing.py  spocuGan.py  test.py  train.py  utils.py
(+26 files in other folders)
