[tool.poetry]
name = "gans-for-network-intrusion-data"
version = "0.1.0"
description = ""
authors = ["Gci04 <gcinzoe04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
keras = "^2.15.0"
tabulate = "^0.9.0"
category-encoders = "^2.6.3"
seaborn = "^0.13.0"
pandas-profiling = "3.1.0"
pre-commit = "^3.5.0"
tensorflow = "^2.15.0"
urllib3 = "1.26.6"
scikit-learn = "1.1.1"
imbalanced-learn = "<0.9"
pydantic = "1.10.13"
pandas = "<1.4.4"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
# Formatting
black = "~22.3.0"
isort = "^5.12.0"

[tool.black]
line-length = 100
experimental-string-processing = true

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true
